--- a/style.css
+++ b/style.css
@@ -1,28 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap');
+
 * {
     margin: 0;
 }
+
 body {
     background: rgb(234, 233, 233);
+    font-family: 'Rajdhani', sans-serif;
 }
+/* Navigation Bar */
 nav {
     display: flex;
     justify-content: space-between;
+    background: linear-gradient(to top, rgba(234, 233, 233, 0.1), rgba(234, 233, 233, 1));
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 #logo {
-    background: whitesmoke;
     font-size: x-large;
     margin: 20px;
     padding: 4px;
     font-weight: 600;
-    box-shadow: 2px 2px 2px rgba(0 0 0/ 0.4);
-}
-
-#logo:hover {
-    color: whitesmoke;
-    background: rgb(154, 154, 154);
-    box-shadow: none;
-    cursor: pointer;
 }
 
 .nav-items {
@@ -42,6 +43,13 @@ li:hover {
     font-weight: bold;
 }
 
+/* H1 Titles */
+h1 {
+    font-size: 5rem;
+    text-align: center;
+}
+
+/* Hero */
 .hero {
     display: flex;
     flex-direction: column;
@@ -60,6 +68,58 @@ section {
     margin-top: 20px;
 }
 
+/* icons */
+.icons {
+    display: flex;
+    flex-direction: row;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100vh;
+}
+.icon {
+    width: 100px;
+    height: 100px;
+}
+
+/* Projects */
+.grid-wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+}
+
+.card {
+    padding: 50px;
+    margin: 20px;
+}
+
+.card-img {
+    width: 100%;
+    height: 255px;
+    object-fit: cover;
+}
+
+.card-img:hover {
+    transform: scale(1.1, 1.1);
+    transition: ease-in-out .75s;
+    box-shadow: 6px 4px 4px rgba(0 0 0/ 0.4);
+}
+
+.card-title {
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+}
+
+.card-body {
+    margin-top: 15px;
+}
+
+.text-center {
+    text-align: center;
+}
+
 /* Contact Form */
 .contact {
     display: flex;
@@ -69,28 +129,47 @@ section {
 }
 
 .contact-heading {
-    margin-bottom: 10px;
+    margin-bottom: 10px;    
 }
 
 form {
     display: flex;
     flex-direction: column;
-    box-shadow: 6px 4px 4px rgba(0 0 0/ 0.4);
+    /* box-shadow: 6px 4px 4px rgba(0 0 0/ 0.4); */
     margin-bottom: 25px;
-    width: 200px;
-    background: rgb(222, 222, 222);
+    width: 400px;
+    /* background: rgb(234, 233, 233); */
 }
 
-#contact {
+input, textarea {
+    background: rgb(234, 233, 233);
+    box-shadow: 6px 4px 4px rgba(0 0 0/ 0.4);
     margin-bottom: 10px;
     border: none;
     padding: 5px;
+    border-radius: 5px;
+}
+
+#contact::placeholder {
+    font-family: 'Rajdhani', sans-serif;
+}
+
+input:focus {
+    outline: none;
+}
+
+textarea:focus {
+    outline: none;
 }
 
 button {
     border: none;
     background: white;
+    font-family: 'Rajdhani', sans-serif;
     cursor: pointer;
+    box-shadow: 6px 4px 4px rgba(0 0 0/ 0.4);
+    padding: 5px;
+    border-radius: 5px;
 }
 
 button:hover {
