--- a/style.css
+++ b/style.css
@@ -2,34 +2,77 @@
 
 * {
     margin: 0;
+    font-family: 'Rajdhani', sans-serif;
+    text-decoration: none;
+   
 }
 
 body {
     background: rgb(234, 233, 233);
-    font-family: 'Rajdhani', sans-serif;
+    overflow-x: hidden;
+    /* width: 100%;
+    height: 100%; */
 }
-/* Navigation Bar */
-nav {
+/* primary-header */
+.primary-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#logo a {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 1rem;
+    font-size: 2rem;
+    z-index: 20;
+    cursor: pointer;
+}
+
+
+/* .nav-items {
+    align-items: center;
+    justify-content: space-between;
+    font-size: 19px;
+} */
+/* nav {
     display: flex;
     justify-content: space-between;
-    background: linear-gradient(to top, rgba(234, 233, 233, 0.1), rgba(234, 233, 233, 1));
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+} */
+/* .nav-items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 19px;
+} */
+nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    
 }
-
-#logo {
-    font-size: x-large;
-    margin: 20px;
-    padding: 4px;
-    font-weight: 600;
-}
-
 .nav-items {
     display: flex;
-    margin-top: 0;
-    width: 300px;
+    margin: 0;
+    padding: 0;
+    font-size: 1.5rem;
+    /* background: rgba(0 0 0 / 0.1); */
+}
+
+/* @supports (backdrop-filter: blur(.3rem)) {
+    .nav-items {
+        background: rgba(0 0 0 / 0.1);
+        backdrop-filter: blur(.3rem);
+    }
+} */
+
+a {
+    color: black;
 }
 
 li {
@@ -50,6 +93,10 @@ h1 {
 }
 
 /* Hero */
+section {
+    margin-top: 20px;
+}
+
 .hero {
     display: flex;
     flex-direction: column;
@@ -57,21 +104,17 @@ h1 {
     justify-content: center;
     height: 100vh;
 }
+
 .hero p {
     font-size: 2rem;
 }
+
 .hero span {
     font-size: 3rem
 }
 
-section {
-    margin-top: 20px;
-}
-
 /* icons */
 .icons {
-    display: flex;
-    flex-direction: row;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -84,40 +127,47 @@ section {
 }
 
 /* Projects */
+.projects {
+    margin-bottom: 100px;
+}
 .grid-wrapper {
     display: grid;
+    margin: 45px;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    justify-content: center;
+    
 }
 
 .card {
-    padding: 50px;
+    padding: 0;
     margin: 20px;
+}
+
+.card-body {  
+    margin-top: 15px;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .card-img {
     width: 100%;
     height: 255px;
     object-fit: cover;
+    border-radius: 20px;
 }
 
 .card-img:hover {
     transform: scale(1.1, 1.1);
-    transition: ease-in-out .75s;
+    transition: ease-in-out .5s;
     box-shadow: 6px 4px 4px rgba(0 0 0/ 0.4);
 }
 
 .card-title {
     font-size: 1.5rem;
     margin-bottom: 5px;
-}
-
-.card-body {
-    margin-top: 15px;
-}
-
-.text-center {
-    text-align: center;
 }
 
 /* Contact Form */
@@ -129,7 +179,7 @@ section {
 }
 
 .contact-heading {
-    margin-bottom: 10px;    
+    margin-bottom: 50px;    
 }
 
 form {
@@ -150,10 +200,6 @@ input, textarea {
     border-radius: 5px;
 }
 
-#contact::placeholder {
-    font-family: 'Rajdhani', sans-serif;
-}
-
 input:focus {
     outline: none;
 }
@@ -165,7 +211,6 @@ textarea:focus {
 button {
     border: none;
     background: white;
-    font-family: 'Rajdhani', sans-serif;
     cursor: pointer;
     box-shadow: 6px 4px 4px rgba(0 0 0/ 0.4);
     padding: 5px;
@@ -176,3 +221,89 @@ button:hover {
     background: rgb(154, 154, 154);
     color: white;
 }
+
+@media (max-width: 600px) {
+    #logo {
+        position: fixed;
+    }
+
+    .nav-items {
+        gap: 1em;
+        position: fixed;
+        align-items: center;
+        inset: 0 0 0 30%;
+        flex-direction: column;
+        padding: min(20vh, 5rem) 2rem;
+        background: rgba(0 0 0 / 0.9);
+        transform: translateX(100%);
+    }
+
+    a {
+        color: whitesmoke;
+    }
+
+    .nav-items[data-visible="true"] {
+        transform: translateX(0%);
+    }
+
+    @supports (backdrop-filter: blur(.3rem)) {
+        .nav-items {
+            background: rgba(0 0 0 / 0.2);
+            backdrop-filter: blur(.3rem);
+        }
+
+        a {
+            color: black;
+        }
+    }
+
+    .hamburger {
+        position: fixed;
+        top: 1rem;
+        right: 2rem;
+        z-index: 10;
+        display: inline;
+        cursor: pointer;
+    }
+    
+    .ham1,
+    .ham2,
+    .ham3 {
+        width: 35px;
+        height: 2px;
+        background-color: black;
+        margin: 8px 0;
+        transition: 0.4s;
+    }
+    
+    .change .ham1 {
+        transform: rotate(-45deg) translate(-7px, 8px);
+    }
+    
+    .change .ham2 {
+        opacity: 0;
+    }
+    
+    .change .ham3 {
+        transform: rotate(45deg) translate(-6px, -8px);
+    }
+
+    .hero p {
+        font-size: 1.5rem;
+    }
+    
+    .hero span {
+        font-size: 2rem
+    }
+
+    .icons {
+        display: grid;
+        justify-items: center;
+        width: 100%;
+        grid-template-columns: repeat(3, 50px);
+        grid-template-rows: repeat(2, 125px);
+        grid-gap: 1px;
+        height: 75vh;
+    }
+}
+
